# trout-stream-proximity-tool

./: EXECUTION-PLAN.md  FUTURE.md  LICENSE  PROJECT-DEFINITION.md  README.md  UNKNOWNS.md  daily-log.md  hello_world.py  main.py  pyproject.toml  test_hello_world.py  test_map.html  test_map_multilinestring.html
docs/: EXECUTION-PLAN.md  FUTURE.md  PANDAS-CHEATSHEET.md  PROJECT-DEFINITION.md  PYTHON-CHEATSHEET.md  UNKNOWNS.md  daily-log.md
docs/adr/: 001-geocoding-api-selection.md  002-distance-calculation-methodology.md  003-geographic-scope.md
learning/: folium_map_basics.py  folium_map_properties.py  geopandas_exercise_stream_data.py  google_geocode_api_basics.py  pandas_basics.py  pandas_exercise_stream_data.py
src/: address_geocode.py  app.py  proximity_analyzer.py  proximity_map.py  stream_data.py
tests/: test_address_geocode.py  test_app.py  test_proximity_analyzer.py  test_proximity_map.py  test_stream_data.py
