[project]
name = "trout-stream-property-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
]
[tool.setuptools]
packages = ["src"]
