[project]
name = "trout-stream-property-tool"
version = "1.0.0"
description = "Calculates distance from a Pennsylvania address to the nearest Class A wild trout stream."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.2",
    "googlemaps>=4.10.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.2",
]
[tool.setuptools]
packages = ["src"]
